--- a/backend-api/docker-compose.yml
+++ b/backend-api/docker-compose.yml
@@ -1,16 +1,40 @@
-version: "3.9"
 services:
   backend:
     build: ./
+    volumes:
+      - ./data/primary:/data
+    environment:
+      - SPRING_PROFILES_ACTIVE=primary
+      - BACKUP_URL=http://backend-backup:8080
+      - REPLICATION_SECRET=ZbqRNYRzXbfr6bdbrzmwMinqOhYWwiA9vvXNxPRnhY6
+      - DATA_DIR=/data
+      - MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE=health
+      - JWT_SECRET=ZbqRNYRzXbfr6bdbrzmwMinqOhYWwiA9vvXNxPRnhY6
     container_name: backend
-    ports:
-      - "8080:8080"
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/actuator/health" ]
+      interval: 10s
+      timeout: 2s
+      retries: 3
+    expose:
+      - "8080"
+    restart: unless-stopped
 
   backend-backup:
     build: ./
+    volumes:
+      - ./data/secondary:/data
+    environment:
+      - SERVER_ROLE=secondary
+      - SPRING_PROFILES_ACTIVE=secondary
+      - REPLICATION_SECRET=ZbqRNYRzXbfr6bdbrzmwMinqOhYWwiA9vvXNxPRnhY6
+      - DATA_DIR=/data
+      - MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE=health
+      - JWT_SECRET=ZbqRNYRzXbfr6bdbrzmwMinqOhYWwiA9vvXNxPRnhY6
     container_name: backend-backup
-    ports:
-      - "8081:8080"
+    expose:
+      - "8080"
+    restart: unless-stopped
 
   nginx:
     image: nginx:alpine
@@ -18,7 +42,8 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - backend
       - backend-backup
+    restart: unless-stopped
